--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,5 +58,6 @@
   "C_Cpp_Runner.msvcSecureNoWarnings": false,
   "files.associations": {
     "rope.h": "c"
-  }
+  },
+  "C_Cpp.default.compilerPath": "/usr/bin/clang"
 }
